openshift-analyzer/kubernetes/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-analyzer
  labels:
    app: openshift-analyzer
spec:
  to:
    kind: Service
    name: openshift-analyzer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
